package ar.edu.utn.frba.dds.quemepongo.dependencies;

public interface NotificationService {
  void notify(String text);
}
