package ar.edu.utn.frba.dds.quemepongo.model.clima;

public enum Alerta {
  TORMENTA,
  GRANIZO,
}
