package ar.edu.utn.frba.dds.quemepongo.model.tareaprogramada;

public interface TareaProgramada {
  void ejecutar();
}
