@startuml iteracion-6

class Planificador {
    agregarTarea(tareaProgramada, cron)
    iniciar()
}

Planificador --> "*" TareaProgramada

interface TareaProgramada {
    ejecutar()
}

TareaProgramada <|.. GenerarSugerencias
TareaProgramada <|.. GenerarAlertas

GenerarAlertas --> RepositorioAlertas
GenerarAlertas --> RepositorioUsuarios
GenerarAlertas -right-> ServicioMeteorologico

GenerarSugerencias --> RepositorioUsuarios

class RepositorioUsuarios {
    getAll()
}

RepositorioUsuarios --> "*" Usuario

class RepositorioAlertas {
    getAll()
    actualizar()
}

RepositorioAlertas --> "*" Alerta

interface ServicioMeteorologico {
    getAlertas()
}

ServicioMeteorologico ..> "*" Alerta
ServicioMeteorologico <|.. AccuWeather

AccuWeather <-- AccuWeatherAPI

class AccuWeatherAPI {
    getWeather(city)
    getAlerts(city)
}

enum Alerta {
    TORMENTA,
    GRANIZO
}

class Usuario {
    agregar(guardarropa)
    generarSugerencia(temperatura)
    emitirAlertas(clima)
}

Usuario -left-> "*" Guardarropa
Usuario --> Atuendo
Usuario --> "*" Accion

class Guardarropa {
  getPrendasSugeribles(categoria) : Prenda[]
}

Guardarropa --> "*" Prenda

class Atuendo {
   superior
   inferior
   calzado
   accesorio
}

Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda
Atuendo --> Prenda

interface Accion {
  anteNuevasAlertas(usuario, alertas)
}

Accion .right.> Usuario
Accion .right.> "*" Alerta

Accion <|.. ActualizarSugerencia
Accion <|.. NotificarAlerta
Accion <|.. EnviarMailAlerta

NotificarAlerta --> NotificationService
EnviarMailAlerta --> MailSender

class MailSender {
    send(email, text)
}

class NotificationService {
    notify(text)
}

@enduml
